[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "crosswalk"
version = "0.0.1"
description = "A package for value alignment across sources"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "IHME Math Sciences", email = "ihme.math.sciences@gmail.com" },
]
dependencies = [
    "pandas",
    "limetr<0.1.0",
    "seaborn",
    "xspline==0.0.7",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
github = "https://github.com/ihmeuw-msca/crosswalk"